# coding

./: README.md  book-store.py
2020/: quick_sort.py
2021/: song_problem.py
2021/graph/: dfs.py  dijkstra.py  graph.py  test_dijkstra.py  test_graph.py
2021/landingai/: lecture.py
2021/leetcode/: apply_discount_every_n_orders.py  best_time_to_buy_and_sell_stock_transaction_fee.py  construct_quad_tree.py  convert_1d_array_into_2d_array.py  count_pairs_with_xor_in_range.py  decode_string.py  elimination_game.py  evaluate_the_bracket_pairs_of_a_string.py  find_the_difference.py  friends_of_appropriate_ages.py  house-robber-iii.py  jump_game_vi.py  k_closest_element.py  key_and_rooms.py  kth_smallest_element_in_a_bast.py  masking_personal_information.py  min_swaps_to_make_string_equal.py  minimum_number_of_days_to_make_m_bouquets.py  minimum_number_of_operations_to_reinitialize_a_permutation.py  most_profit_assigning_work.py  n_ary_tree_level_order_traversal.py  new_21_game.py  paht_with_max_probability.py  palindrome_pairs.py  push_dominoes.py  range_frequency_queries.py  rectangle_area.py  sum_of_k_mirror_numbers.py  sum_of_mutated_array_closest_to_target.py  trapping-rain-water.py  two_sum_iv_is_a_bst.py  walking_robot_simulation.py
2021/medium-problems/: concert.py  diff_max_min.py  sum_product_digits.py  swap_dict.py
2021/nops/: main.py  words_2.txt
2021/numa/: README.md  db.json  design.md  generate_all.py  get_all.sh  pyproject.toml  requests_.py
2021/secretfriend/: log.txt  main.py  test_main.py
2021/slice/: MY_QUESTIONS_AFTER_SOLUTION.md  argparser.py  const.py  main.py  pizzabot  solver.py  test_argparser.py  test_solver.py
2022/: same_letters_problem.py
2022/42technologies/: README.md  SOLUTION.md  const.py  filehandler.py  main.py  metadata.py  node.py  sibling_levels.py  test_node.py  (+5 more)
2022/beon-tech-studio/: app.py  category.py  pyproject.toml  user.py
2022/beon-tech-studio/data/: categories.json  products.json  users.json
2022/beon-tech-studio/test/: test_user.py  users.json  users_filtered.json
2022/lean-tech/: README.md  dbapp.py  main.py  pyproject.toml  string_model.py
2022/matildaexp/asset_api/: .env-example  .gitignore  README.md  TODO.md  config.py  exception_detail.py  main.py  pyproject.toml  route_v1.py
2022/matildaexp/asset_api/api_model/: asset.py  index.py
2022/matildaexp/asset_api/db/: app.py  database.db  main.py  path.py  start.py
2022/matildaexp/asset_api/dbmodel/: asset.py  index.py
2022/matildaexp/asset_api/dbmodel/script/: create.py
2022/matildaexp/asset_api/logic/: asset.py  index.py
2022/matildaexp/asset_api/model_db/: asset.py  index.py  operation.py
2022/matildaexp/asset_api/model_db/script/: README.md  create.py
2022/matildaexp/asset_api/router/: asset.py  exception_detail.py  index.py  url_v1.py
2022/matildaexp/asset_api/test/: .env  test_main.py
2022/matildaexp/asset_api/test/asset_api/logic/: test_asset.py  test_index.py
2022/matildaexp/asset_api/test/db/: db_delete.py  fixture.py
2022/matildaexp/asset_api/test/fixture/: asset.py  database.py  index.py
2022/matildaexp/asset_api/test/logic/: test_asset.py  test_index.py
2022/matildaexp/asset_api/test/model_db/: fixture_index.py  test_asset.py  test_index.py  test_operation.py
2022/matildaexp/asset_api/test/router/: test_asset.py  test_index.py
2022/vital/: .env-example  .gitignore  README.md  api.py  config.py  dateutils.py  exception_detail.py  glucose_model.py  libreview_service.py  pyproject.toml  test_api.py  test_dateutils.py  test_libreview_service.py
2023/langflow/: .env  .pdm-python  README.md  pyproject.toml
2023/langflow/app/: main.py  schemas.py  services.py
2023/langflow/tests/: conftest.py  constants.py  test_main.py  test_services.py
2023/langflow/tests/end2end_tests/: _test_main.py
2023/necc-org/: README.md  instructions.md  pyproject.toml  pytest.ini
2023/necc-org/app/: config.py  db.py  main.py  schemas.py  service.py
2023/necc-org/app/tests/: conftest.py  test_db.py  test_main.py  test_schemas.py
2024/: bucket_balls.py  coin_change.py  dijkstra.py  felix.py  matrix_1.py  subset_sum.py  test_gen.py
misc/: anagram.py
(+108 files in other folders)
