[project]
name = ""
version = ""
description = ""
authors = [
    {name = "allainclair", email = "allainclair@gmail.com"},
]
dependencies = [
    "requests>=2.27.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
requests = "python requests_.py"
