[project]
name = ""
version = ""
description = ""
authors = [
    {name = "allainclair", email = "allainclair@gmail.com"},
]
dependencies = [
    "fastapi>=0.81.0",
    "uvicorn>=0.18.3",
    "sqlmodel>=0.0.8",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
